<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="banner_home_footer">ca-app-pub-8120927785000028/5320325595</string>
    <string name="interstitial_home_footer">ca-app-pub-8120927785000028/2366859192</string>
    <string name="app_name">Pembagian Waris Islam</string>
    <string name="app_version"><b><i>Pembagian Waris Islam</i> v0.2</b>\n</string>
    <string name="app_dev"><b>Analisis, Desain dan Pengembang :</b>\n- Fikri Fahru Roji\n- Eri Satria M. Si,\n- Dewi Tresnawati MT.</string>
    <string name="app_source"><b>Kode Sumber :\n</b>-</string>
    <string name="app_ref_calc"><b>Library Perhitungan :\n</b>Faraid System (Ridwan Setiawan)</string>
    <string name="app_ref"><b>Referensi Materi : \nKitab Al Asas Fi Ilmi Faraidh</b>\nPenulis : KH Aceng Zakaria\nPenerbit : Pesantren Persatuan Islam Garut (Garut, 1995)</string>
    <string name="app_val"><b>Validasi Perhitungan : </b>\nUstadz Abdurosyid</string>
    <string name="app_dev_mail"><b>Website : </b>informatika.sttgarut.ac.id\n<b>Email : </b>fikrifahruroji@live.com</string>
    <string name="copyright">Copyright © 2015 Fikri Fahru Roji</string>
    <string name="materi_0">Definisi Faraid (Waris Islam)</string>
    <string name="materi_1">Ayat-ayat Waris</string>
    <string name="materi_2">Hadits-hadits Waris</string>
    <string name="materi_3">Hak-hak Harta Waris</string>
    <string name="materi_4">Rukun Waris</string>
    <string name="materi_5">Sebab dan Syarat</string>
    <string name="materi_6">Penghalang Hak Waris</string>
    <string name="materi_7">Ahli Waris</string>
    <string name="materi_8">Pohon Keluarga</string>
    <string name="materi_9">Permasalahan Waris</string>
    <string name="exit">Anda yakin mau keluar?</string>
    <string name="confirm">Konfirmasi</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="next"><b>Lanjut</b></string>
    <string name="back"><b>Kembali</b></string>
    <string name="home"><b>Home</b></string>
    <string name="blank"></string>
    <string name="separator">|</string>
    <string name="rp">Rp. </string>
    <string name="hasil"><b>Hasil</b></string>
    <string name="hitung"><b>Hitung</b></string>
    <string name="reset"><b>Ulang</b></string>
    <string name="error">Error</string>
    <string name="error_msg">Silahkan lengkapi inputan</string>
    <string name="ada">Ada</string>
    <string name="terhalang">(terhalang)</string>
    <string name="inh1"><i>Masukan Jumlah Harta Peninggalan</i></string>
    <string name="inh2"><i>Masukan Jumlah Harta Istri</i></string>
    <string name="inh3"><i>Masukan Jumlah Hutang</i></string>
    <string name="inh4"><i>Masukan Jumlah Biaya Pemakaman</i></string>
    <string name="inh5"><i>Masukan Jumlah Wasiat</i></string>
    <string name="help_materi">\nBantuan Menggunakan\nMenu Materi\n</string>
    <string name="help_hitung">\nBantuan Menggunakan\nMenu Perhitungan\n</string>
    <string name="step1"><b>Langkah 1</b></string>
    <string name="step2"><b>Langkah 2</b></string>
    <string name="step3"><b>Langkah 3</b></string>
    <string name="langkah1"><b>Tentukan Siapa yang Meninggal</b></string>
    <string name="Langkah1Desc">Hal yang pertama kali dilakukan adalah mengetahui siapa yang meninggal, mulai dari jenis kelamin, apakah mayit sudah menikah dan jika sudah menikah apakah sudah memiliki anak?</string>
    <string name="str_kelamin">Jenis Kelamin :</string>
    <string name="str_kelamin_l">Laki - Laki</string>
    <string name="str_kelamin_p">Perempuan</string>
    <string name="str_status">Status pernikahan :</string>
    <string name="str_status_nikah">Sudah Menikah</string>
    <string name="str_status_t_nikah">Belum Menikah</string>
    <string name="str_status_cerai">Bercerai</string>
    <string name="str_anak">Mempunyai anak?</string>
    <string name="str_anak_ya">Ya</string>
    <string name="str_anak_tidak">Tidak</string>
    <string name="langkah2"><b>Masukkan Tarikah dan Hak-hak yang harus dipenuhi</b></string>
    <string name="langkah2Desc">Selanjutnya menghitung seluruh harta yang dimiliki si mayit atau yang dikenal dengan sebutan <i>Tarikah</i> atau <i>Tirkah</i> atau Warisan. Kemudian ada baiknya cek dulu apakah sudah benar-benar tidak ada kewajiban yang harus tunaikan dari hal yang berkaitan dibawah ini.</string>
    <string name="tarikah">Tarikah (Total harta warisan) :</string>
    <string name="hak1">Harta campur (Milik Istri / Gonogini) :</string>
    <string name="hak2">Hutang :</string>
    <string name="hak3">Biaya pemakaman :</string>
    <string name="hak4">Wasiat (maksimum ⅓ tarikah) :</string>
    <string name="langkah3"><b>Masukkan Ahli Waris</b></string>
    <string name="langkah3Desc">Masukkan anggota keluarga si mayit yang masih hidup atau masih terkait dalam pernikahan (suami/istri yang sudah bercerai tidak termasuk dalam hitungan, tetapi anak kandung dari perceraian masuk dalam hitungan)</string>
    <string name="str_anak_laki">Anak Laki-laki</string>
    <string name="str_anak_perempuan">Anak Perempuan</string>
    <string name="str_istri">Istri</string>
    <string name="str_suami">Suami</string>
    <string name="str_bapak">Bapak</string>
    <string name="str_ibu">Ibu</string>
    <string name="str_kakek">Kakek (Ayah dari Bapak)</string>
    <string name="str_nenek_bapak">Nenek (Ibu dari Bapak)</string>
    <string name="str_nenek_ibu">Nenek (Ibu dari Ibu)</string>
    <string name="str_cucu_laki">Cucu Laki-laki</string>
    <string name="str_cucu_perempuan">Cucu Perempuan</string>
    <string name="str_saudara_kandung">Saudara Kandung</string>
    <string name="str_saudari_kandung">Saudari Kandung</string>
    <string name="str_saudara_sebapak">Saudara Sebapak</string>
    <string name="str_saudari_sebapak">Saudari Sebapak</string>
    <string name="str_saudara_seibu">Saudara Seibu</string>
    <string name="str_saudari_seibu">Saudari Seibu</string>
    <string name="str_keponakan_sekandung">Anak laki-laki dari\nSaudara/i Sekandung</string>
    <string name="str_keponakan_sebapak">Anak laki-laki dari\nSaudara/i Sebapak</string>
    <string name="str_paman_kandung">Paman Kandung</string>
    <string name="str_paman_sebapak">Paman Sebapak</string>
    <string name="str_anak_paman_kandung">Anak laki-laki dari\nPaman Kandung</string>
    <string name="str_anak_paman_sebapak">Anak laki-laki dari\nPaman Sebapak</string>
    <string-array name="ahli_items">
        <item>1. Anak Laki-laki</item>
        <item>2. Anak Perempuan</item>
        <item>3. Istri</item>
        <item>4. Suami</item>
        <item>5. Bapak</item>
        <item>6. Ibu</item>
        <item>7. Kakek (Ayah dari Bapak)</item>
        <item>8. Nenek (Ibu dari Bapak)</item>
        <item>9. Nenek (Ibu dari Ibu)</item>
        <item>10. Cucu Laki-laki</item>
        <item>11. Cucu Perempuan</item>
        <item>12. Saudara Kandung</item>
        <item>13. Saudari Kandung</item>
        <item>14. Saudara Sebapak</item>
        <item>15. Saudari Sebapak</item>
        <item>16. Saudara Seibu</item>
        <item>17. Saudari Seibu</item>
        <item>18. Anak laki-laki dari Saudara/i Sekandung</item>
        <item>19. Anak laki-laki dari Saudara/i Sebapak</item>
        <item>20. Paman Kandung</item>
        <item>21. Paman Sebapak</item>
        <item>22. Anak laki-laki dari Paman Kandung</item>
        <item>23. Anak laki-laki dari Paman Sebapak</item>
    </string-array>
    <string name="mat_definisi">Definisi Faraid</string>
    <string name="mat_definisi_desc"><![CDATA[<i><b>Faraid</i></b> adalah jamak dari <i><b>faridhoh</i></b> diambil dari kata <i><b>fardh</i></b> yang artinya takdir (ketentuan). Fardh secara syar&#39;i adalah bagian yang telah ditentukan bagi ahli waris. Ilmu mengenai hal itu dinamakan ilmu waris (&#39;ilmu miirats) dan ilmu Faroidh.<br><br><b><i>Al-miirats</i></b> (<font color=#FF0000>الميراث</font>) dalam bahasa Arab adalah bentuk mashdar (infinitif) dari kata <b><i>waritsa-yaritsu-irtsan-miiraatsan</i></b> (<font color=#FF0000>وَرِثَ يَرِثُ إِرْثًا وَمِيْرَاثًا</font>). Maknanya menurut bahasa ialah &#39;berpindahnya sesuatu dari seseorang kepada orang lain&#39;, atau dari suatu kaum kepada kaum lain.<br><br>Pengertian menurut bahasa ini tidaklah terbatas hanya pada hal-hal yang berkaitan dengan harta, tetapi mencakup harta benda dan non harta benda.<br><br>Ayat-ayat Al-Qur&#39;an banyak menegaskan hal ini, demikian pula sabda Rasulullah SAW. Di antaranya Allah berfirman: <br><b><i>&#34;Dan Sulaiman telah mewarisi Daud ...&#34;</i></b> (an-Naml: 16)<br><b><i>&#34;... Dan Kami adalah yang mewarisinya.&#34;</i></b> (al-Qashash: 58)<br><br>Selain itu kita dapati dalam hadits Nabi SAW.:<br><b><i>&#39;Ulama adalah ahli waris para nabi&#39;.</i></b><br> <br>Sedangkan makna <b>al-miirats</b> menurut istilah yang dikenal para ulama ialah berpindahnya hak kepemilikan dari orang yang meninggal kepada ahli warisnya yang masih hidup, baik yang ditinggalkan itu berupa harta (uang), tanah, atau apa saja yang berupa hak milik legal secara syar&#39;i.]]></string>
    <string name="mat_ayat"><b>Ayat-ayat Waris</b></string>
    <string name="mat_ayat_desc"><![CDATA[Adapun ayat waris yang terdapat dalam kitab suci Al-Qur&#39;an adalah sebagai berikut.<br><br><b>QS. An-Nisa ayat 11:</b><br>]]></string>
    <string name="mat_ayat_desc1"><![CDATA[<i>Artinya:<br><font>Allah mensyari&#39;atkan bagimu tentang (pembagian pusaka untuk) anak-anakmu. Yaitu: bahagian seorang anak lelaki sama dengan bagahian dua orang anak perempuan; dan jika anak itu semuanya perempuan lebih dari dua, maka bagi mereka dua pertiga dari harta yang ditinggalkan; jika anak perempuan itu seorang saja, maka ia memperoleh separo harta. Dan untuk dua orang ibu-bapa, bagi masing-masingnya seperenam dari harta yang ditinggalkan, jika yang meninggal itu mempunyai anak; jika orang yang meninggal tidak mempunyai anak dan ia diwarisi oleh ibu-bapanya (saja), maka ibunya mendapat sepertiga; jika yang meninggal itu mempunyai beberapa saudara, maka ibunya mendapat seperenam. (Pembagian-pembagian tersebut di atas) sesudah dipenuhi wasiat yang ia buat atau (dan) sesudah dibayar hutangnya. (Tentang) orang tuamu dan anak-anakmu, kamu tidak mengetahui siapa di antara mereka yang lebih dekat (banyak) manfaatnya bagimu. Ini adalah ketetapan dari Allah. Sesungguhnya Allah Maha Mengetahui lagi Maha Bijaksana</i>. (QS. An-Nisa : 11)</font><br><br><b>QS. An-Nisa ayat 12:</b><br>]]></string>
    <string name="mat_masalah_1">Banci (fukaha)</string>
    <string name="mat_masalah_2">Orang Hilang</string>
    <string name="mat_masalah_3">Janin Dalam Kandungan</string>
    <string name="mat_masalah_4">Dzawil Arham</string>
    <string name="mat_masalah_5">Zina dan Li\'an</string>
    <string name="mat_masalah_6">Mati Bersama</string>
    <string name="mat_masalah_7">Saudara Sesusu</string>
</resources>