<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_materi"
    android:orientation="vertical"
    tools:context="id.barkost.warisislam.Materi" >

    <ScrollView
        android:id="@+id/scroll_materi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/mat_definisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_0"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_ayat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_hadits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_hak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_rukun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_sebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_penghalang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_ahli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_pohon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_cust"
                android:onClick="onClick"
                android:text="@string/materi_8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mat_masalah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/button_custt"
                android:onClick="onClick"
                android:text="@string/materi_9"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>