<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_hitung"
    android:orientation="vertical"
    tools:context="id.barkost.warisislam.Step1" >

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/step2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/sc_hitung2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/t"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tx_s2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/langkah2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tx_s2_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/langkah2Desc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tx_tarikah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarikah"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_tarikah_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_tarikah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/inh1"
                    android:inputType="number"
                    android:maxLength="13" />
            </LinearLayout>

            <TextView
                android:id="@+id/tx_hak1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hak1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_hak1_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_hak1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/inh2"
                    android:inputType="number"
                    android:maxLength="13" />
            </LinearLayout>

            <TextView
                android:id="@+id/tx_hak2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hak2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_hak2_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_hak2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/inh3"
                    android:inputType="number"
                    android:maxLength="13" />
            </LinearLayout>

            <TextView
                android:id="@+id/tx_hak3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hak3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tx_hak3_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_hak3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/inh4"
                    android:inputType="number"
                    android:maxLength="13" />
            </LinearLayout>

            <TextView
                android:id="@+id/tx_hak4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hak4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp" >

                <TextView
                    android:id="@+id/tx_hak4_rp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edit_hak4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/inh5"
                    android:inputType="number"
                    android:maxLength="13" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#22222222" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/separator"
            android:textColor="#ff888888"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView1"
            android:background="@drawable/button_nav"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_next_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView1"
            android:background="@drawable/button_nav"
            android:text="@string/next" />
    </RelativeLayout>

</RelativeLayout>